# CryptoPay

./: .replit  README.md  conversion_page.html  conversion_page_source.html  package-lock.json  package.json
attached_assets/: Pasted-1-Initial-Concept-Project-Idea-You-started-with-the-idea-of-building-a-decentralized-payroll--1747387533398.txt  Pasted-Advanced-Technical-Features-for-CryptoPay-1-Smart-Contract-Enhancements-Anchor-Program-Mult-1747386324237.txt  Pasted-Build-a-full-stack-solution-for-a-web-based-cryptocurrency-payroll-and-invoicing-platform-designed-f-1747142183124.txt  Pasted-Convert-the-entire-project-to-run-on-the-Solana-devnet-ensuring-it-s-live-functional-and-fetching-1747457587878.txt  Pasted-Cross-Chain-Page-Not-Found-Additional-Pages-Implement-a-Custom-Page-Not-Found-Error-Page--1747465700601.txt  Pasted-CryptoPay-Decentralized-Payroll-Invoicing-Platform-on-Solana-Project-Overview-CryptoPay-is-a--1747385427412.txt  Pasted-CryptoPay-Decentralized-Payroll-Invoicing-Platform-on-Solana-Project-Overview-CryptoPay-simpli-1747387378423.txt  Pasted-Design-Overview-CryptoPay-s-frontend-should-provide-a-modern-clean-and-responsive-experience-that-1747386569739.txt  Pasted-Error-setting-role-TypeError-message-Failed-to-execute-fetch-on-Window-api-users-rol-1747391767696.txt  Pasted-Objective-Build-a-complete-CryptoPay-MVP-dApp-on-Replit-that-is-fully-connected-to-the-Solana-devn-1747462792304.txt  (+8 more)
client/: index.html
server/: kv-storage.ts  routes.ts  solana-api.ts  storage.ts  walrus-storage.ts  (+2 more)
solana-program/: Cargo.toml
solana-program/src/: lib.rs
(+102 files in other folders)
