[package]
name = "crypto-payroll"
version = "0.1.0"
description = "Cryptocurrency payroll and invoicing platform on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crypto_payroll"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"